--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: <a href="jbullmurapa@gmail.com"</p>
+            <p>Email: <a href="jbullmurapa@gmail.com">My email address</a></p>
             <p>LinkedIn: <a href=" www.linkedin.com/in/john-bull-murapa ">LinkedIn Profile</a></p>
             <p>GitHub: <a href="https://github.com/johnbull00">GitHub Profile</a></p>
         </section>
