--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,13 @@
             <p>LinkedIn: <a href=" www.linkedin.com/in/john-bull-murapa ">LinkedIn Profile</a></p>
             <p>GitHub: <a href="https://github.com/johnbull00">GitHub Profile</a></p>
         </section>
+		<section id="Work Experience">
+		    <h2>Work Experience<h2/>
+			<p>Agricura</p>
+			<p>Plus94 Market Research</p>
+			<p>Freelancing</p>
+		</section>
+			 
     </main>
     <footer>
         <p>© 2025 John Bull Murapa</p>
