Rename to index.html

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
         </section>
 		<section id="Work Experience">
 		    <h2>Work Experience<h2/>
-			<p>Agricura</p>
+			<p>Agricura Pvt Ltd</p>
 			<p>Plus94 Market Research</p>
 			<p>Freelancing</p>
 		</section>
